# mafw-lastfm

./: AUTHORS  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac
control-panel/: Makefile.am  mafw-lastfm-cpa.c  mafw-lastfm.desktop  mafw-lastfm.desktop.in.in
debian/: changelog  control  mafw-lastfm.install  mafw-lastfm.xsession  postinst  prerm  rules
mafw-lastfm/: Makefile  Makefile.am  mafw-lastfm-scrobbler.c  mafw-lastfm-scrobbler.h  mafw-lastfm.c
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  en_GB.po  es.po  fi.po  mafw-lastfm.pot  ru.po
