SUBDIRS = \
	control-panel \
	mafw-lastfm   \
	po

icon48_DATA = $(srcdir)/data/as.png
icon48dir   = $(datadir)/icons/hicolor/48x48/apps

EXTRA_DIST = \
		$(icon48_DATA)
		intltool-extract.in \
		intltool-merge.in   \
		intltool-update.in

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge   \
	intltool-update
